--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,9 @@
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>ndt_omp</build_depend>
+  <build_depend>yaml-cpp</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
@@ -23,7 +26,9 @@
   <run_depend>ndt_omp</run_depend>
   <build_depend>GTSAM</build_depend>
   <run_depend>GTSAM</run_depend>
-
+  <run_depend>yaml-cpp</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>tf</run_depend>
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
